--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,6 +13,7 @@
         android:layout_marginRight="20dip"
         android:text="ip:" />
 
+
     <EditText
         android:id="@+id/uname"
         android:layout_width="fill_parent"
@@ -22,11 +23,12 @@
         android:autoText="false"
         android:capitalize="none"
         android:gravity="fill_horizontal"
-        android:text="请输入用户名" />
+        android:hint="输入IP" />
 
     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Connect" />
+
 </LinearLayout>
