--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dip"
         android:layout_marginRight="20dip"
-        android:text="ip:" />
+        android:text="IP:" />
 
 
     <EditText
@@ -20,15 +20,14 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dip"
         android:layout_marginRight="20dip"
-        android:autoText="false"
-        android:capitalize="none"
+        android:autofillHints="127.25.98."
         android:gravity="fill_horizontal"
-        android:hint="输入IP" />
+        android:hint="输入IP"
+        android:inputType="text" />
 
     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Connect" />
-
 </LinearLayout>
